# wsclient

./: Cargo.toml  README.md  build.rs  commands.txt  log.txt  todo.txt
gstreamer_patch/: gstglcolorconvert.c
src/: app.rs  bindings.rs  glvideo.rs  interaction.rs  lib.rs  main.rs  message.rs  text_renderer.rs  vertex.rs  view.rs  view_state.rs  window_message.rs
src/shaders/: glfrag_argb.glsl  glfrag_argb_grey.glsl  glfrag_argb_scaling.glsl  glfrag_text.glsl  glvert_text.glsl
src/util/: bitrate.rs  element_timer.rs  mod.rs  timed_iter.rs  window_timer.rs
