[package]
name = "wsclient"
version = "0.1.0"
authors = ["eseaflower <eseaflower@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = {version = "0.8", features=["async-std-runtime"] }
futures =  "0.3"
async-std = {version="1.0", features=["attributes"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
gstreamer = {version="0.16"}
gstreamer-webrtc = {version="0.16", features=["v1_18"]}
gstreamer-sdp = {version="0.16"}
gstreamer-app = {version="0.16"}
gstreamer-video = {version="0.16"}
gstreamer-gl = {version = "0.16" }
anyhow="1.0"
image="0.23"
bytemuck = "1.4"
cgmath = "0.18"
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
dicom = "0.3"
spin_sleep = "1.0"
#winit = "0.24"
raw-window-handle = "0.3"
glutin = "0.26"
glyph_brush = "0.7"

[build-dependencies]
gl_generator = { version = "0.14" }